--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body{
     font-size: 14px;
     line-height: 1.3em;
 }
+p{margin: 0.5em 0;}
 .wrapper{
     width: 1000px;
     margin: 0px auto;
@@ -42,7 +43,7 @@ table{
     padding: 0px;
 }
 .table td{
-    padding: 0.5em;
+    padding: 0.4em 0.5em;
 }
 
 .table td.pad0{
@@ -69,6 +70,10 @@ table{
 }
 .mt-15{
     margin-top: 15px;
+}
+
+.mt-10{
+    margin-top: 10px;
 }
 
 .pt-15{
@@ -147,6 +152,7 @@ label:hover:before {
 
 .page-footer{
     border-top:2px solid #000;
+    margin-top: 5px;
 }
 .foot-right{
     float: right;
@@ -175,6 +181,12 @@ label:hover:before {
     height: 100px;
     vertical-align: top;
 }
+
+.height70{
+    height: 70px;
+    vertical-align: top;
+}
+
 
 
 
