--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,7 @@ ol li{
 .table{
     padding: 0px;
     border-collapse: collapse;
+    line-height: 1.5em;
 }
 table{
     border-collapse: collapse;
