--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,12 @@ ol li{
     padding-top: 0.5em;
 }
 
+.posre{
+    position: relative;
+}
+.h-100{
+    height: 100%;
+}
 
 .text-center{
     text-align: center;
@@ -40,6 +46,7 @@ ol li{
     width: 1000px;
     margin: 0px auto;
     padding: 35px 50px;
+    position: relative;
 }
 .header{
     overflow: hidden;
@@ -199,6 +206,8 @@ label:hover:before {
 .page-footer{
     border-top:2px solid #000;
     margin-top: 5px;
+    position: fixed;
+    width: 100%;
 }
 .foot-right{
     float: right;
