--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ ol li{
 
 .posre, .container{
     position: relative;
+    padding-bottom: 5px;
 }
 .h-100{
     height: 100%;
@@ -208,7 +209,7 @@ label:hover:before {
     margin-top: 15px;
     position: absolute;
     width: 100%;
-    bottom: 0px;
+    bottom: 5px;
 }
 .foot-right{
     float: right;
