updated for text

--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,8 @@ ol li{
 .table td.pad0{
     padding: 0em;
 }
+.bod-left0{border-left: 0px;}
+.bod-right0{border-right: 0px;}
 .bod-left{
     border-left: 1px solid #000;
 }
