--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body{
     margin:0px;
     color: #000;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
+    font-size: 180vw;
     line-height: 1.3em;
 }
 p{margin: 0.5em 0;}
@@ -37,7 +37,7 @@ ol li{
 }
 
 .container{
-    font-size: 18px;
+    font-size: 180vw;
 }
 .h-100{
     height: 100%;
