--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ ol li{
 }
 
 .container{
-    font-size: 18px;
+    font-size: 14px;
 }
 .h-100{
     height: 100%;
@@ -161,6 +161,7 @@ ol li{
   position: relative;
   padding-left: 1.95em;
   cursor: pointer;
+  /* line-height: 1.5; */
 }
 
 /* checkbox aspect */
@@ -218,10 +219,10 @@ label:hover:before {
 
 .page-footer{
     border-top:2px solid #000;
-    margin-top: 15px;
+    /* margin-top: 15px; */
     position: absolute;
     width: 100%;
-    bottom: 15px;
+    /* bottom: 12px; */
 }
 .foot-right{
     float: right;
@@ -256,8 +257,6 @@ label:hover:before {
     height: 70px;
     vertical-align: top;
 }
-
-
 
 
 
