--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,7 @@ ol li{
 
 .posre, .container{
     position: relative;
-    min-height: 1824.39px;
-    /* height: calc(100% - 85px); */
+    height: calc(100% - 85px);
 }
 
 .container{
