--- a/css/style.css
+++ b/css/style.css
@@ -219,10 +219,9 @@ label:hover:before {
 
 .page-footer{
     border-top:2px solid #000;
-    /* margin-top: 15px; */
     position: absolute;
     width: 100%;
-    /* bottom: 12px; */
+    bottom: -48.5px;
 }
 .foot-right{
     float: right;
