--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@ p{margin: 0.5em 0;}
     font-size: 16px;
 }
 
+.exclude_fill .form_filling {
+    display: none
+}
+
 .page12  p{margin: 0.4em 0;}
 .d-in{
     display:inline-block;
