electronic_trading - exclude fill
(cherry picked from commit 8d60543ee12fd896155744bb306dabc757aac0e3)

--- a/css/style.css
+++ b/css/style.css
@@ -221,6 +221,9 @@ ol li{
 [type="checkbox"].checkbox-checked + label:before{
     background: #0ad1f1;
 }
+.exclude_fill [type="checkbox"].checkbox-checked + label:before{
+    background: none
+}
 
 /* hover style just for information */
 label:hover:before {
